feat: mejoras de seguridad, validacion, paginacion y configuracion
- Rate limiting en login: bloqueo tras 5 intentos fallidos (5min)
- Validacion DTOs: @NotNull + @NotBlank en campos String, @Size en password
- Paginacion: getAll() usa Pageable/Page en 16 controllers y servicios
- JWT incluye roles como claim para autorizacion en frontend
- Log de errores JWT: catch separados con log.warn en validateToken()
- CORS externalizado a variable de entorno CORS_ORIGINS
- Credenciales eliminadas de application.properties
- RBAC con @PreAuthorize en todos los controllers
- Verificacion de FKs en create() y update() de todos los servicios
- Email unique en Cliente y Empleado, JOIN FETCH en findByEmail
- H2 console deshabilitada, show-sql=false, logging security=WARN
- Lombok configurado correctamente con annotationProcessorPaths
- .env.example con plantilla de variables de entorno
- Handler para AccessDeniedException (403) en GlobalExceptionHandler